# squrust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  plan.md
scripts/: publish-wiki.sh
squrust-async/: Cargo.toml
squrust-async/src/: connection.rs  error.rs  lib.rs  migrate.rs  pool.rs  query.rs  row.rs  stream.rs  transaction.rs
squrust-async/tests/: api.rs
squrust-cli/: Cargo.toml
squrust-cli/src/: main.rs  output.rs  repl.rs
squrust-cli/tests/: cli.rs  interop.rs
squrust-core/: Cargo.toml
squrust-core/src/: error.rs  lib.rs  varint.rs
squrust-core/src/btree/: cursor.rs  mod.rs  node.rs  split.rs
squrust-core/src/mvcc/: mod.rs  snapshot.rs  version.rs
squrust-core/src/page/: cache.rs  format.rs  mod.rs
squrust-core/src/storage/: file.rs  header.rs  mod.rs
squrust-core/src/wal/: checkpoint.rs  frame.rs  mod.rs
squrust-core/tests/: engine.rs
squrust-ffi/: Cargo.toml  build.rs  squrust.h
squrust-ffi/src/: bind.rs  column.rs  constants.rs  errmsg.rs  exec.rs  lib.rs  mem.rs  meta.rs  open.rs  prepare.rs  state.rs  step.rs  stubs.rs  types.rs
squrust-ffi/tests/: c_abi.c  ffi.rs  ld_preload.rs
squrust-macros/: Cargo.toml  squrust.schema
squrust-macros/migrations/: 001_create_posts.sql  002_seed_posts.sql
squrust-macros/src/: lib.rs  schema.rs
squrust-macros/tests/: macros.rs
squrust-serde/: Cargo.toml
squrust-serde/src/: from_row.rs  lib.rs  to_params.rs
squrust-sql/: Cargo.toml
squrust-sql/src/: ddl.rs  error.rs  lib.rs  parser.rs  pragma.rs  row.rs  types.rs
squrust-sql/src/executor/: aggregate.rs  builtins.rs  datetime.rs  distinct.rs  dml.rs  eval.rs  filter.rs  join.rs  limit.rs  mod.rs  projection.rs  scan.rs  setop.rs  sort.rs
squrust-sql/src/planner/: expr.rs  mod.rs  optimizer.rs  resolver.rs
squrust-sql/src/schema/: catalog.rs  mod.rs
squrust-sql/tests/: sql.rs
squrust-sync/: Cargo.toml
squrust-sync/src/: lib.rs
squrust-sync/tests/: sync.rs
squrust-wasm/: Cargo.toml  index.d.ts  package.json
squrust-wasm/src/: lib.rs
wiki/: Architecture.md  Async-API.md  Building-and-Testing.md  C-ABI-and-LD_PRELOAD.md  CLI.md  Derive-Macros.md  Home.md  Roadmap.md  SQL-Engine.md  SQLite-Compatibility.md  Storage-Engine.md  Sync-API.md  _Footer.md  _Sidebar.md
