[workspace]
members = [
    "squrust-core",
    "squrust-sql",
    "squrust-serde",
    "squrust-async",
    "squrust-sync",
    "squrust-ffi",
    "squrust-macros",
    "squrust-cli",
    "squrust-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
bytes              = "1"
thiserror          = "1"
anyhow             = "1"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
memmap2            = "0.9"
parking_lot        = "0.12"
async-trait        = "0.1"
futures            = "0.3"
async-stream       = "0.3"
sqlparser          = "0.52"
deadpool           = { version = "0.12", features = ["rt_tokio_1"] }
syn                = { version = "2",    features = ["full"] }
quote              = "1"
proc-macro2        = "1"
criterion          = { version = "0.5",  features = ["html_reports"] }
proptest           = "1"
libc               = "0.2"
tempfile           = "3"

# Internal crates
squrust-core   = { path = "squrust-core" }
squrust-sql    = { path = "squrust-sql" }
squrust-serde  = { path = "squrust-serde" }
squrust-async  = { path = "squrust-async" }
squrust-sync   = { path = "squrust-sync" }
squrust-macros = { path = "squrust-macros" }

[profile.release]
lto = true
codegen-units = 1
