[package]
name = "squrust-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Squrust SQL parser, planner and execution engine"

[dependencies]
squrust-core = { workspace = true }
sqlparser = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
