[package]
name = "squrust-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser (wasm) target for Squrust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
squrust-async = { workspace = true }
squrust-sql = { workspace = true }
serde_json = { workspace = true }

# Browser-only dependencies. Gated so the host workspace build stays clean.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { workspace = true }
